argocd/monolith-service/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monolith-service
  labels:
    app: monolith-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monolith-service
  template:
    metadata:
      labels:
        app: monolith-service
    spec:
      containers:
        - name: monolith-service
          image: deepinchat/monolith-service:4f618db776ad6215895b37e2411d0bc39e78aa3f
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          volumeMounts:
            - name: app-data
              mountPath: /app/data
