argocd/monolith-service/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monolith-service
spec:
  type: ClusterIP
  selector:
    app: monolith-service
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
